# ragtg-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHEATSHEET.md  CLAUDE.md  Cargo.toml  Dockerfile  PROMTS.md  README.md  backup.sh  docker-compose.yml
.claude/: settings.local.json
.sqlx/: query-06c945e50567c6801f1346d436cdc86a82a4e13dd45d8286295ba37cdbdc045e.json  query-0768fe307360f2f16f1563fd3ebb8fe447604773d7985c48e7e07c1e0b721d18.json  query-097f6a475599652fa26d33ed414803b464b7a790eee8f6a083509148d97bfc54.json  query-0d376bbfc1a3169d207f83433739eb1922dca1651260117a96fd314704160ed3.json  query-0fdfce777c73c08b1f43f79fbc8c583884c6b974dd2ebddb3a8fe0053503b401.json  query-10c5502e996e00ff20b1bc611679d2e5afb8aef727b200bda4d51101d321efbb.json  query-1738f493dceb5811d8b4c8f9a70f6746aabb679c6692199b2e152e43f622591b.json  query-1bbddd63c99d50233f780277a3507bab6c7d28ebff07294f32a12298d48a0ebd.json  query-25c2a4f5c897e597acce4e407aaac761014599a8fbcee451c4557e62afe136ec.json  query-27681aee1e8ef235dfc656722b0acd137d2f088e2242244c4435f97d2c0cdb16.json  query-38e84630bbc69de9b856d244f663d63e3035cecf54a0709d5ca0e79e8e33536d.json  query-3f3133d507eb3d35c224c72e10347cc30d47778f839ead62c4a99fed63566cf7.json  query-4cd7f80250e546c15552d554157d39f95e0d4f15eccfa630f1b11d3d70116b44.json  query-4ecf63dc27ff1cc7fddd626299474140e0a8a78d1212c4f33e9aa6a7c5efee89.json  query-5f38388b424211424bf06d5f7294e4096f90ca9b00723c17099ed33bbfe6486d.json  query-692affbd7aca86ac7c8e10b102052fe08a2c98f5edea6828838bd3b699147fc4.json  query-75c6086721cfc5f1f4e1a89c373e25e1462fda850e011300e7a56299e982f2e9.json  query-7a5b8b251a34a9c4034e27de16c7c5e2553e4868d3e6590af3d03621520c5ef9.json  query-7d5ab1f9fbec4340bd8f837378f2ffea677d0fa2deff4698d932a7a168050009.json  query-9470eeae0ea40dd859cd8621e9def8dca9631fa22238d2f0074b4b63edea2845.json  query-9c0d8ad338d5758b8916fea9484ab982ac194dc1244d9687eeb3ad306ec26e48.json  (+10 more)
(+44 files in other folders)
