[package]
name = "project_name"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1"
thiserror = "2"

# Async and Telegram
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros"] }

# Storage
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
qdrant-client = "1"
deadpool-redis = "0.18"

# HTTP and serialization
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
prometheus = "0.13"

# Config
figment = { version = "0.10", features = ["toml", "env"] }
