[package]
name = "ragtg_bot"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
anyhow = "1"
thiserror = "2"

# Async and Telegram
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros"] }

# Storage
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
qdrant-client = "1"
deadpool-redis = "0.18"

# HTTP and serialization
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing (for media SHA256 cache)
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Stream consumption for teloxide's download_file_stream
futures-util = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
prometheus = "0.13"

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# UUIDs for Qdrant point IDs
uuid = { version = "1", features = ["v4"] }

# HTTP server (healthz + metrics)
axum = "0.8"
